src/components/header.module.css
.header {
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.isMenuOpen {
  height: 100vh;
}

.wrapper {
  composes: headerBackground from global;
  min-height: var(--header-height);
  height: var(--header-height);
  border-bottom: 1px solid var(--mercury);
}

.container {
  composes: container from global;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
}

.controls {
  display: flex;
  align-items: center;
  gap: 16px;
  height: 100%;
}

.menu {
  display: flex;
  height: 100%;
}

.nav {
  height: 100%;
  margin-right: 32px;
}

.navList {
  display: flex;
  align-items: center;
  height: 100%;
}

.navItem {
  display: flex;
  align-items: center;
  height: 100%;
}

.navLink {
  position: relative;
  display: flex;
  align-items: center;
  height: 100%;
  padding: 0 16px;
  color: var(--gray);
  font-size: 16px;
  font-weight: 600;
  transition: color 0.3s;
}

.navLinkIcon {
  width: 100%;
}

.navLink:hover,
.navLink:focus-visible {
  color: var(--mine-shaft);
}

.navLink::after {
  content: '';
  background-color: var(--crusta);
  position: absolute;
  bottom: -1px;
  left: 0;
  width: 100%;
  height: 1px;
  transform: scaleX(0);
  transition: transform 0.5s;
}

.isNavLinkActive {
  color: var(--mine-shaft);
}

.isNavLinkActive::after {
  transform: scaleX(1);
}

